--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 # in the templates available like {{ site.myvariable }}.
-title: Clean portfolio theme for Jekyll powered by Bootstrap 4.
-email: your-email@domain.com
-brand: Your Name
-headline: Inventor, Engineer and Futurist
+title: Tedious Website
+email: leanlee311@gmail.com
+brand: Lingda Li
+headline: Inventor, Engineer and Sneakerhead
 description: > # this means to ignore newlines until "baseurl:"
   New Site
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-copyright: 2016 Whatever Company, Inc. All Rights Reserved.
+url: "http://lingdali.github.io" # the base hostname & protocol for your site
+copyright: Lingda Li's Personal Website. All Rights Reserved.
 
 # Build settings
 markdown: kramdown
@@ -17,8 +17,8 @@ markdown: kramdown
 snapwidget: 247552
 
 # Contacts
-email: your.name@gmail.com
-phone: +1-800-555-2016
+email: leanlee311@gmail.com
+phone: +1-352-999-1123
 
 # Tracking
 googleAnalitycsID: UA-83933844-1
