--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Clean portfolio theme for Jekyll powered by Bootstrap 4.
 email: your-email@domain.com
 brand: Lingda Li
-headline: Failure is an option, but fear is not
+headline: 你走后我又遇到了很多个雨天，却再也没有勇气冒雨去见你一面
 description: > # this means to ignore newlines until "baseurl:"
   New Site
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -23,4 +23,4 @@ phone: +1-800-555-2016
 # Tracking
 googleAnalitycsID: UA-83933844-1
 
-theme: jekyll-theme-cayman
+
